# django-rest-start-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
src/: asgi.py  global_constants.py  settings.py  urls.py  wsgi.py
src/apps/authentication/: admin.py  auth.py  models.py
src/apps/authentication/migrations/: 0001_initial.py  0002_authtoken_user.py
src/apps/core/: cache.py  choices.py  exception.py  log.py  models.py  openapi.py  pagination.py  serializers.py
src/apps/fake_admin/: apps.py  forms.py  urls.py  views.py
src/apps/fake_admin/templates/fake_admin/: login.html
src/apps/user/: managers.py  models.py
src/apps/user/migrations/: 0001_initial.py
src/settings/: README.md  __init__.py  base.py  local.py  test.py
tests/: test_project.py
